# mitmproxy_rs

./: .gitignore  Cargo.toml  demo.py  justfile  pyproject.toml
.cargo/: config.toml
mitmproxy-desktop/: Cargo.toml
mitmproxy-desktop/src/: app.rs  cert_manager.rs  config.rs  main.rs  proxy.rs
mitmproxy-desktop/src/neohtop/: package-lock.json  package.json
