[package]
name = "mitmproxy-desktop"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
mitmproxy = { path = "../" }
mitmproxy_rs = { path = "../mitmproxy-rs" }
anyhow = { version = "1.0.93", features = ["backtrace"] }
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hudsucker = { version = "0.23.0", features = ["openssl-ca"] }
openssl = "0.10"
tokio-tungstenite = "0.24"
iced = { version = "0.10", features = ["tokio", "debug"] }
iced_native = "0.10"
rfd = "0.12"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
rcgen = "0.12"
rustls-pemfile = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0.1"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincrypt"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl-probe = "0.1" 